# jackdawsentry-graph

./: .dockerignore  .env.example  .gitignore  .semgrep.yml  AGENTS.md  CHANGELOG.md  CHATGPT.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SUPPORT.md  THIRD_PARTY_NOTICES.md  docker-compose.graph.ingest.yml  docker-compose.graph.yml  jackdawsentry.code-workspace  pyproject.toml  pytest.ini  requirements-test.txt  requirements.docker.txt  requirements.minimal.txt  requirements.release.txt
.github/workflows/: frontend-e2e.yml  public-readiness.yml  security.yml  semgrep-pr-comments.yml  semgrep.yml
.windsurf/rules/: 00-project-context.md  60-lessons-memory.md
docker/: Dockerfile  graph-nginx.Dockerfile  nginx.graph.conf
docker/postgres/: init.sql
docker/redis/: redis.conf
docs/: CONFIGURATION.md  DEPLOYMENT.md  FEATURES.md  SEMGREP.md  TROUBLESHOOTING.md
docs/assurance/: README.md  data-integrity-storage-drift-summary.md  dependency-supply-chain-release-provenance-summary.md  graph-truthfulness-summary.md  operational-recovery-rollback-summary.md  performance-scale-analyst-workload-summary.md  security-authz-abuse-summary.md
docs/drills/: README.md
docs/releases/: 2026-03-public-release.md  README.md
frontend/: graph-login.html
frontend/app/: README.md  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts  vitest.config.ts
frontend/css/: graph-login.css
frontend/js/: auth.js  graph-login.js
scripts/branding/: generate_brand_assets.py
scripts/dev/: create_dev_user.py  create_user.py  init_drill_run.py  load_perf_fixture_dataset.py
scripts/quality/: boundary_audit.py  live_abuse_probe.py  live_perf_probe.py  public_readiness_audit.py  release_provenance_audit.py  repo_hygiene_audit.py
scripts/split/: boundary_audit.py  create_graph_dev_user.py  extract_graph_repo.sh  generate_brand_assets.py  public_readiness_audit.py  sync_graph_surface.py
src/api/: auth.py  config.py  database.py  exceptions.py  graph_app.py  graph_dependencies.py  graph_ingest_runtime.py  middleware.py  wait_for_graph_dependencies.py
src/collectors/: __init__.py  address_ingest_worker.py  backfill.py  base.py  bitcoin.py  cosmos.py  ethereum.py  lightning.py  manager.py  solana.py  solana_instruction_parser.py  starknet.py  sui.py  token_metadata_backfill.py  tron.py  xrpl.py
src/services/: canonical_assets.py  contract_info.py  entity_attribution.py  graph_sessions.py  price_oracle.py  sanctions.py  token_metadata.py
src/trace_compiler/: __init__.py  asset_selection.py  compiler.py  lineage.py  models.py  price_oracle.py
src/tracing/: __init__.py  bridge_log_decoder.py  bridge_registry.py  bridge_tracer.py
tasks/: lessons.md  memory.md  security-backlog.md  todo.md
tests/: __init__.py  asgi_testclient.py  conftest.py
tests/test_api/: test_asset_catalog.py  test_auth_security.py  test_browser_surface.py  test_graph_app.py  test_graph_ingest_runtime.py  test_ingest_status.py  test_migration_manager.py  test_perf_fixture_loader.py  test_rate_limit_middleware.py
tests/test_collectors/: test_address_ingest_worker.py  test_base_token_normalization.py  test_dex_log_extraction.py  test_ingest_runtime_regressions.py  test_token_metadata_backfill.py  test_tron_dex_log_extraction.py
tests/test_scripts/: test_create_user.py  test_graph_compose_mode_flags.py  test_repo_hygiene_audit.py
tests/test_services/: test_canonical_assets.py  test_contract_info.py  test_graph_sessions.py  test_price_oracle.py
tests/test_trace_compiler/: test_address_enrichment.py  test_address_exposure_enricher.py  test_asset_options_contract.py  test_bitcoin_compiler.py  test_bridge_hop_compiler.py  test_bridge_tracer.py  test_canonical_asset_write.py  test_compiler_stub.py  test_cosmos_chain_compiler.py  test_evm_compiler.py  test_evm_log_decoder.py  test_expansion_cache.py  test_integrity_metadata.py  test_lineage.py  test_live_fetch.py  test_multi_asset_selection.py  test_neo4j_time_filter.py  test_on_demand_ingest.py  test_public_session_endpoints.py  test_service_classifier.py  test_session_endpoints.py  test_session_persistence.py  test_session_security.py  test_solana_chain_compiler.py  test_solana_instruction_parser.py  (+5 more)
(+133 files in other folders)
